# quill

./: .gitignore  BACKLOG.md  InkLine-Proto.html  InkLine-V1.html  InkLine-V2.html  README.md  TAURI.md  WORKFLOW.md  main.js  package-lock.json  package.json  quill.html
.agents/: local-agent.md
.scratch/: workflow-guide.md
code/: index.html  main.js  preload.js  quill.html  smoke-check.html
code/html/: markdown-pane.html  outline-pane.html  preview-pane.html
code/scripts/: app-config.js  desktop-bridge.js  markdown-pane.js  markdown.js  outline-pane.js  preview-pane.js  quill-app.js  storage.js
code/styles/: quill.css
docs/: BACKLOG.md  BL-0001-TECH.md  PRODUCT.md  README.md  TAURI-WINDOWS-SETUP.md
docs/00 - Backlog/: PRD-000002-TECH.md  PRD-000003-CHANGE.md  PRD-000004-UI.md  PRD-000007-TECH.md  PRD-000008-TECH.md  PRD-000009-UI.md  PRD-000010-TECH.md  PRD-000019-CHANGE.md  PRD-000020-CHANGE.md  PRD-0002-TECH.md  PRD-0003-CHANGE.md  PRD-0004-UI.md  PRD-0007-TECH.md  PRD-0008-TECH.md  PRD-0009-UI.md  PRD-0010-TECH.md  README.md
docs/01 - Plan/: PRD-000018-BUG.md  README.md
docs/02 - Implement/: PRD-000017-TECH.md  README.md
docs/03 - Test/: README.md
docs/04 - Release/: PRD-000001-TECH.md  PRD-000005-CHANGE.md  PRD-000006-UI.md  PRD-000007-TECH.md  PRD-000011-BUG.md  PRD-000012-BUG.md  PRD-000013-BUG.md  PRD-000014-BUG.md  (+8 more)
scripts/: build-production.ps1  bump-version.mjs  check-tauri-prereqs.ps1  serve-quill.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+7 files in other folders)
