[package]
name = "quill-tauri"
version = "1.0.2"
description = "Quill desktop shell built with Tauri."
authors = ["conor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
