[package]
name = "quill-tauri"
version = "1.0.4"
description = "Quill desktop shell built with Tauri."
authors = ["conor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
